# mathslib

./: Cargo.toml
src/: lib.rs
src/generals/: complex.rs  mod.rs
src/generals/tensor/: mod.rs  tensor.rs  types.rs  vector.rs
src/generals/traits/: mod.rs  number.rs  pow.rs  sqrt.rs  trig.rs
src/geometry/: mod.rs  polar.rs
src/geometry/coordinates/: cartesian.rs  geodetic.rs  mod.rs  polar.rs
src/geometry/geodetic/: mod.rs
src/geometry/line/: mod.rs
src/geometry/shape/: mod.rs  poligon.rs
