[package]
name = "mathslib"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mathslib/mathslib"
description = "A math library for Rust"
license = "Apache-2.0"

[lib]
name = "mathslib"
path = "src/lib.rs"

[features]
solve = []
optimize = []
stats = []
geometry = []

[dependencies]
thiserror = "1.0"


[toolchain]
channel = "nightly"
