[package]
name = "mathslib"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mathslib/mathslib"
description = "A math library for Rust"
license = "Apache-2.0"

[lib]
name = "mathslib"
path = "src/lib.rs"

[features]
solve = []
optimize = []
stats = []
geometry = []
serde = ["dep:serde"]

[dependencies]
thiserror = "1.0"
uom = "0.36"
serde = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
approx = "0.5"
